[project]
name = "ptuparser"
version = "0.0.4"
authors = [
  { name="Vahid Ganjalizadeh", email="vganjali@ucsc.edu" }
]
description = "A fast library to read Pico Quant's *.ptu files."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/vganjali/ptu"
"Bug Tracker" = "https://github.com/vganjali/ptu/issues"